--- a/src/courier/ViewOrderDetails.form
+++ b/src/courier/ViewOrderDetails.form
@@ -196,7 +196,7 @@
                                       <Component id="heightlbl" min="-2" pref="17" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="10" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="deletebtn" min="-2" max="-2" attributes="0"/>
@@ -350,10 +350,12 @@
                                           <Component id="itemprice1lbl" min="-2" pref="16" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="3" attributes="0">
-                                          <Component id="totallbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          <Component id="itemlbl1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="total1lbl" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="totallbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="itemlbl1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
